--- a/contact.html
+++ b/contact.html
@@ -18,9 +18,9 @@
       </nav>
   </header>
     <div>
-      <h1>Contact Details :</h1><br>
-      <p class="Phone">Phone:<span>9014571060</span></p>
-      <p class="mail">mail:<span>gunasekharmadura@gmial.com</span></p>
+      <h1>Contact Details :</h1>
+      <p class="Phone row gap1">Phone:<span>9014571060</span></p>
+      <p class="mail row gap1">mail:<span>gunasekharmadura@gmial.com</span></p>
     </div>
   </body>
 </html>
