--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </ul>
         </nav>
     </header>
-    <div class="row container">
+    <div class="container">
         <div class="hero">
             <h1 class="hero__heading">I'am Madura <span>Gunasekhar</span></h1>
             <p class="hero__para">This is my official portfolio website to show all
