--- a/skill.html
+++ b/skill.html
@@ -17,19 +17,19 @@
         </ul>
     </nav>
 </header>
-  <h1>Skills</h1>
+  <h2 class="edu">Skills</h2>
   <table cellspacing="10">
     <tr>
-      <td>Programing Languages :</td>
-      <td>Python, HTML, CSS, JavaScript, React JS</td>
+      <th class="pro">Programing Languages :</th>
+      <td class="data">Python, HTML, CSS, JavaScript, React JS</td>
     </tr>
     <tr>
-      <td>Operating System  :</td>
-      <td>Windows, Linux, Mac.</td>
+      <th class="pro">Operating System  :</th>
+      <td class="data">Windows, Linux, Mac.</td>
     </tr>
     <tr>
-      <td>Other Skills :</td>
-      <td>MS Word, Power Point. </td>
+      <th class="pro">Other Skills :</th>
+      <td class="data">MS Word, Power Point. </td>
     </tr>
   </table>
 </body>
