--- a/About.html
+++ b/About.html
@@ -18,15 +18,15 @@
         </nav>
     </header>
 
-    <div>
+    <div class="edu row gap1">
         <h1>Madura Gunasekhar</h1>
-        <p>Recent Graduate | [Btech]</p>
+        <p><span>Recent Graduate | [Btech]</span></p>
     </div>
     
-    <section>
-        <h2>Education</h2>
-        <p>[Sri Venkateswara College Of Engineering And Technology,Chittoor], [2023]</p>
-        <p>[Btech-Ece] - [7.25/CGPA]</p>
+    <section class="row gap1">
+        <h2 class="head">Education</h2>
+        <p class="move">[Sri Venkateswara College Of Engineering And Technology,Chittoor], [2023]</p>
+        <p class="move">[Btech-Ece] - [7.25/CGPA]</p>
     </section>
 </body>
 </html>
